codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_fresh_session_transitions.snap
---
source: tui/src/startup_draft_tests.rs
assertion_line: 201
expression: "snapshots.join(\"\\n---\\n\")"
---
resume lookup fallback:
before:
  o----.
     .-'  siyuan
  .-'
  '----o
  Resuming session…

› draft while loading


after:
  o----.
     .-'  siyuan
  .-'
  '----o


› draft while loading


---
fork lookup fallback:
before:
  o----.
     .-'  siyuan
  .-'
  '----o
  Forking session…

› draft while loading


after:
  o----.
     .-'  siyuan
  .-'
  '----o


› draft while loading


---
resume picker cancellation:
before:
hidden while picker owns input
after:
  o----.
     .-'  siyuan
  .-'
  '----o


› Ask Codex to do anything

  ? for shortcuts
---
fork picker cancellation:
before:
hidden while picker owns input
after:
  o----.
     .-'  siyuan
  .-'
  '----o


› Ask Codex to do anything

  ? for shortcuts
