codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_full_frames.snap
---
source: tui/src/startup_draft_tests.rs
assertion_line: 117
expression: "snapshots.join(\"\\n---\\n\")"
---
empty (48 columns):
  o----.
     .-'  siyuan
  .-'
  '----o


› Ask Codex to do anything

  ? for shortcuts
---
resuming (48 columns):
  o----.
     .-'  siyuan
  .-'
  '----o
  Resuming session…

› Ask Codex to do anything

  ? for shortcuts
---
forking (48 columns):
  o----.
     .-'  siyuan
  .-'
  '----o
  Forking session…

› draft while loading


---
multiline (48 columns):
  o----.
     .-'  siyuan
  .-'
  '----o


› first startup line
  second startup line


---
narrow (18 columns):
  o----.
     .-'  siyuan
  .-'
  '----o


› first startup
  line
  second startup
  line
